--- a/.github/workflows/deploy_production.yml
+++ b/.github/workflows/deploy_production.yml
@@ -49,7 +49,7 @@ jobs:
               yarn run build
               echo "Building application done"
               echo "Starting application"
-              pm2 start ecosystem.config.js
+              pm2 start ecosystem.config.cjs
               echo "Starting application done"
             else
               echo "Updating repository"
